--- a/nX-U8-assembler.cabal
+++ b/nX-U8-assembler.cabal
@@ -21,8 +21,8 @@ source-repository head
   location:            https://github.com/lasnikr/nX-U8-assembler.git
 
 common common-options
-  build-depends:       base ^>= 4.13.0.0
-  
+  build-depends:       base ^>= 4.13.0.0,
+                       haskeline ^>= 0.7.5
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
